# Internship-WS22-CCA-Game-of-Life

./: CMakeLists.txt  readme.md
benchmark/game_of_life_simple/: benchmark.sh  benchmark_small_increment.sh  plot_1000.plot  plot_smallinc.plot
benchmark/python_opengl/: comparision.plot
benchmark/smooth_growth_fft/: benchmark_const_and_dynamic_R.sh  benchmark_small_increment.sh  plot_const_R.plot  plot_const_R_updated.plot  plot_const_and_dynamic_R.plot  plot_const_and_dynamic_R_frames.plot
include/glfft/: glfft.cpp  glfft_wisdom.hpp
include/glfft/test/glfw/: glfft_gl_api_headers.hpp
shaders/fft/: bit-reverse-order.comp  conjugate-scale.comp  conjugate.comp  fft1D.comp
shaders/game_of_life/continuous_space/: shader.frag
shaders/game_of_life/continuous_states/: shader.frag
shaders/game_of_life/fft_smooth_growth/: growth.frag  product.frag
shaders/game_of_life/glfft_smooth_growth/: buffer_growth.comp  buffer_product.comp  copy.comp
shaders/game_of_life/kernel/: shader.frag
shaders/game_of_life_continuous_space/: shader.frag
shaders/game_of_life_larger_than_life/: shader.frag
shaders/game_of_life_simple/compute/: shader.comp
shaders/game_of_life_simple/fragment/: shader.frag
shaders/game_of_life_smooth_growth/: shader.frag
shaders/growth/: shader.frag
src/continuous_space/: main.cpp
src/continuous_states/: main.cpp
src/fft/: FFT1D.cpp  FFT1D.h  FFT2D.cpp  FFT2D.h  GLFFT2D.cpp  GLFFT2D.h  IFFT2D.cpp  IFFT2D.h  fft_test.cpp
src/game_of_life/continuous_space/: main.cpp
src/game_of_life/continuous_states/: main.cpp
src/game_of_life/fft_smooth_growth/: benchmark.cpp  main.cpp
src/game_of_life/glfft_smooth_growth/: benchmark.cpp  main.cpp
src/game_of_life/growth/: main.cpp
src/game_of_life/kernel/: main.cpp
src/game_of_life/larger_than_life/: main.cpp
src/game_of_life/simple/compute/: benchmark.cpp  main.cpp
src/game_of_life/simple/fragment/: benchmark.cpp  main.cpp
src/game_of_life/smooth_growth/: benchmark.cpp  main.cpp
src/game_of_life/smooth_kernel/: main.cpp
src/game_of_life_continuous_space/: main.cpp
src/game_of_life_continuous_states/: main.cpp
src/game_of_life_growth/: main.cpp
src/game_of_life_kernel/: main.cpp
src/game_of_life_larger_than_life/: main.cpp
src/game_of_life_simple/compute/: benchmark.cpp  main.cpp
src/game_of_life_simple/fragment/: benchmark.cpp  main.cpp
src/game_of_life_smooth_growth/: main.cpp
src/game_of_life_smooth_kernel/: main.cpp
src/glfw-abstraction/: Arguments.h  GLFWAbstraction.h  SimpleComputeShader.cpp  SimpleComputeShader.h  SimpleShader.cpp  SimpleShader.h
src/growth/: main.cpp
src/kernel/: main.cpp
src/larger_than_life/: main.cpp
src/simple/compute/: benchmark.cpp  main.cpp
src/simple/fragment/: benchmark.cpp  main.cpp
